--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "@babel/preset-typescript": "^7.17.12",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
+    "@types/node": "^18.15.0",
     "@types/react-dom": "^18.0.5",
+    "@types/three": "^0.149.0",
     "@typescript-eslint/eslint-plugin": "^5.28.0",
     "@typescript-eslint/parser": "^5.28.0",
     "babel-loader": "^8.2.5",
